Scaffolding for 2024-2025